# LaredoMLOps

./: Licence.txt  README.md  template_output.yaml
.github/workflows/: build-backend.yml  build-chatbot.yml  build-frontend.yml  build-images.yml  package-helm-chart.yml
backend/: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.trainer  languageWrapper_template.jinja  laredo_api.py  laredo_api_test.py  preprocessing_strategy.py  pyproject.toml  requirements.txt  wsgi.py
backend/src/: wsgi.py
backend/src/api/: laredo_api.py
backend/src/trainer/: trainer.py
backend/src/utils/: creation_types.py  model_parameters_dataclasses.py  model_strategies.py  preprocessing_data_classes.py  preprocessing_strategy.py  preprocessing_transfomer.py  utils.py
backend/src/utils/nn_models/: RNN.py  SimpleMultiLayerPerceptron.py
backend/test/: laredo_api_test.py
chatbot/: LICENSE  README.md
chatbot/backend/: .env.example  .gitignore  Dockerfile  Dockerfile.ollama  README.md  pyproject.toml
chatbot/backend/docs/: automl-questions.md  sklearn-classification.md  sklearn-preprocessing.md  sklearn-regression.md  user-guide-questions.md  user-guide.md
chatbot/backend/scripts/: README.md  init_chroma_db.py
chatbot/backend/src/: wsgi.py
chatbot/backend/src/api/: api.py  chatbot_service.py  test_sin_stream.html
chatbot/backend/src/chatbot/: chat_initializer.py  core_initializer.py  graph_initializer.py  main.py
chatbot/backend/src/config/: config_chatbot.py  config_init.py  config_url.py
chatbot/backend/src/evaluator/: evaluators.py  example_creation.py
chatbot/backend/src/utils/: directory_loader.py  document_manager.py  embedding_manager.py  gemini_model_manager.py  in_memory_embedding_manager.py  key_manager.py  logger_manager.py  ollama_model_manager.py  rate_limiter_manager.py  web_loader.py
chatbot/backend/tests/: document_manager_test.py  embedding_manager_test.py  gemini_model_manager_test.py  in_memory_embedding_manager_test.py  key_manager_test.py  ollama_model_manager_test.py
chatbot/frontend/: README.md  eslint.config.js  index.html  jsconfig.json  package.json  run_frontend.bat  setup_frontend.bat  vite.config.js
chatbot/frontend/src/: index.js  main.jsx
chatbot/scripts/: init_chroma_db.py
frontend/: Dockerfile  custom-nginx.template  generate-config.sh
frontend/laredo-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/laredo-app/src/: App.css  App.jsx  main.jsx
helm-chart/laredo/: Chart.yaml  values.yaml
helm-chart/laredo/templates/: _helpers.tpl  gateway-class.yaml  gateway.yaml  httproute-frontend.yaml  httproute-localstack.yaml  httproute-mlflow.yaml  ingress.yaml  laredo-backend-deployment.yaml  laredo-backend-role.yaml  laredo-backend-rolebinding.yaml  laredo-backend-secret.yaml  (+23 more)
scripts/: start-laredo.ps1
tutorials/: Helm-parameters.md  Installation_guide.md
(+56 files in other folders)
