[tool.poetry]
name = "LaredocMind-backend"
version = "0.1.3"
description = "LaredocMind: The knowledge you seek, before you ask."
authors = ["Gabriel Gomez Garcia <ggg239@alumnos.unican.es>"]
repository = "https://github.com/Gabiz053/chatbot-laredo"
keywords = ["LaredocMind", "chatbot", "backend", "langchain", "flask"]
license = "MIT"
# package-mode = false

[tool.poetry.dependencies]
# Core libraries
python = "3.11.9"
loguru = "0.7.3"

# LangChain and related packages
langchain = "0.3.25"
langchain-chroma = "0.2.3"
langchain-community = "0.3.23"
langchain-google-genai = "2.1.4"
langchain-ollama = "0.3.2"
langsmith = "0.3.42"
langgraph = "0.4.1"

# Web scraping and markdown processing
bs4 = "0.0.2"
markdownify = "1.1.0"

# Environment variables
dotenv = "0.9.9"

# Natural language processing
nltk = "3.9.1"
rouge-score = "0.1.2"

# Web framework
flask = "3.1.0"
flask_cors = "5.0.1"
gunicorn = "23.0.0"
protobuf = "3.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
