[project]
name = "LaredocMind-backend"
version = "0.1.3"
description = "LaredocMind: The knowledge you seek, before you ask."
authors = [{ name = "Gabriel Gomez Garcia", email = "ggg239@alumnos.unican.es" }]
requires-python = "==3.11.9"
license = "MIT"
keywords = [
    "LaredocMind",
    "chatbot",
    "backend",
    "langchain",
    "flask",
]
dependencies = [
    "loguru==0.7.3",
    "langchain==0.3.25",
    "langchain-chroma==0.2.3",
    "langchain-community==0.3.23",
    "langchain-google-genai==2.1.4",
    "langchain-ollama==0.3.2",
    "langsmith==0.3.42",
    "langgraph==0.4.1",
    "bs4==0.0.2",
    "markdownify==1.1.0",
    "dotenv==0.9.9",
    "nltk==3.9.1",
    "rouge-score==0.1.2",
    "flask==3.1.0",
    "flask_cors==5.0.1",
    "gunicorn==23.0.0",
    "protobuf==3.20.2",
]

[project.urls]
Repository = "https://github.com/Gabiz053/chatbot-laredo"


